--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-top: 27px;
 }
 .header__inner {
   width: 1700px;
@@ -83,6 +84,11 @@ body {
   margin-left: 5px;
   margin-right: 5px;
   color:#4FA95D;
+}
+.deselct__img, .export__img, .import__img, .intotal{
+  width:20px;
+  height: 20px;
+  margin-right: .5px;
 }
 /*Popup's*/
 .popup {
