--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,9 @@
 html {
   scroll-behavior: smooth;
 }
-hr {
+hr, br {
   margin: 0;
+  padding: 0;
 }
 ul,
 li {
@@ -37,6 +38,78 @@ input{
 }
 .latestDate, .earliestDate{
   color: #4FA95D;
+}
+.line__header{
+  padding-right: 110px;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  background-color: #414F51;
+  width: 100%;
+  height:50px;
+  font-size: 25px;
+  font-weight: 500;
+  color:#fff;
+}
+/*Main header*/
+.main__header {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.main__header__inner {
+  width: 1700px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 80px;
+}
+.main__header__link {
+  color: #9C9C9C;
+  font-size: 18px;
+  font-weight: 500;
+  width: 212.5px;
+  display: flex;
+  height: 80px;
+  justify-content: center;
+  align-items: center;
+}
+.main__header__link.active{
+  background-color: #00B0D9;
+  color: #fff;
+}
+.grid__header {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #00B0D9;
+  width: 100%;
+  height: 420px;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 30px;
+}
+.grid-row {
+  display: flex;
+  width: 1700px;
+  height: 95px;
+}
+.grid-block {
+  display: flex;
+  width: 212.5px;
+  color: #fff;
+  flex-direction: column;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-align: center;
+}
+.grid-block.active{
+color:#DFDC1B;
+}
+.grid__img{
+  padding-bottom: 8px;
 }
 .container {
   max-width: 1920px;
@@ -182,7 +255,7 @@ input{
   border: none;
   cursor: pointer;
 }
-select {
+.filter__vibor {
   width: 534px;
   height: 54px;
   padding: 10px;
@@ -247,6 +320,27 @@ select {
   font-size: 20px;
   font-weight: 500;
 }
+.slider-wrapper .navigation .go-to-page .go-button,
+.slider-wrapper .navigation .prev-button,
+.slider-wrapper .navigation .next-button,
+.slider-wrapper .navigation .page-button {
+  display: inline-block;
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #00B0D9;
+  color: #000;
+  cursor: pointer;
+  outline: none;
+  text-decoration: none;
+  margin-right: 10px;
+}
+.slider-wrapper .navigation .go-button:hover,
+.slider-wrapper .navigation .prev-button:hover,
+.slider-wrapper .navigation .next-button:hover,
+.slider-wrapper .navigation .page-button:hover {
+  background-color: #00B0D9;
+  color: #FFE200;
+}
 /*Table*/
 .table__title{
   display: flex;
@@ -274,22 +368,87 @@ th {
   font-size: 20px;
   font-weight: 400;
   color: #1E1E1E;
-  word-wrap: break-word;
 }
 #data-table {
-  table-layout: fixed;
-}
 
+}
 #data-table td, #data-table th {
-  overflow: hidden;
-  white-space: pre-wrap;
-  word-wrap: break-word;
+
+}
+.data-table__heaeder__title{
+  display: flex;
+  text-transform: uppercase;
+  color: #787878;
+  font-size: 20px;
+  font-weight: 400;
+  outline: none;
+  text-decoration: none;
+  text-align: left;
+}
+.data-table__heaeder th {
+  height: 100px;
+  word-break: break-word;
+}
+.data-table__heaeder th:first-child,
+.data-table__heaeder th:nth-child(3),
+.data-table__heaeder th:nth-child(8) {
+  width: 100px;
+}
+.data-table__heaeder th:nth-child(2) {
+  width: 350px;
+}
+.data-table__heaeder th:nth-child(4),
+.data-table__heaeder th:nth-child(5) {
+  width: 306px;
 }
 
+.data-table__heaeder th:nth-child(6) {
+  width: 118px;
+}
+.data-table__heaeder th:nth-child(7) {
+  width: 318px;
+}
+.search {
+  width: 100%;
+}
+.search__input{
+  height: 54px;
+  width: 100%;
+  border: none;
+}
+.data-table__heaeder th {
+  height: 100px;
+  word-break: break-word;
+}
+.data-table__heaeder td:first-child,
+.data-table__heaeder td:nth-child(3),
+.data-table__heaeder td:nth-child(8) {
+  width: 100px;
+}
+.data-table__heaeder td:nth-child(2) {
+  width: 350px;
+}
+.data-table__heaeder td:nth-child(4),
+.data-table__heaeder td:nth-child(5) {
+  width: 306px;
+}
 
-
-
-
+.data-table__heaeder td:nth-child(6) {
+  width: 118px;
+}
+.data-table__heaeder td:nth-child(7) {
+  width: 318px;
+}
+.search__select{
+  width: 100%;
+  height: 54px;
+  padding: 10px;
+  background-color: #fff;
+  font-size: 20px;
+  color: #202020;
+  font-weight: 400;
+  border: none;
+}
 
 [id^="clearIcon"] {
   display: none;
