--- a/styles.css
+++ b/styles.css
@@ -166,40 +166,6 @@ color:#DFDC1B;
   height: 20px;
   margin-right: .5px;
 }
-/*Popup's*/
-.popup {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 90%;
-  max-height: 90%;
-  width: 600px;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 9999;
-  overflow: auto;
-}
-.popup h2 {
-  color: #ffffff;
-}
-.close-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 24px;
-  color: #fff;
-  cursor: pointer;
-}
-.close-button:hover {
-  color: #ff0000;
-}
-.popup-container {
-  text-align: center;
-  margin-top: 50px;
-  height: 100vh;
-  position: relative;
-}
 /*Clear table*/
 .clear__table{
   width: 100%;
@@ -401,7 +367,6 @@ th {
 .data-table__heaeder th:nth-child(5) {
   width: 306px;
 }
-
 .data-table__heaeder th:nth-child(6) {
   width: 118px;
 }
@@ -449,12 +414,218 @@ th {
   font-weight: 400;
   border: none;
 }
-
-[id^="clearIcon"] {
+/*Popup's*/
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1433px;
+  z-index: 9999;
+  background-color: #fff;
+}
+/*Import*/
+#ImportPopup{
+  height: 1080px;
+}
+.import__header{
+  background-color: #F4F4F4;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+}
+.import__title{
+  margin-left: 60px;
+}
+.import__title__text{
+  font-size: 30px;
+  color: #000;
+  font-weight: 700;
+}
+.import__heaeder__content{
+  display: flex;
+  flex-direction: row;
+  margin-right: 60px;
+  color: #1E1E1E;
+}
+.import__link{
+  text-decoration: none;
+}
+.import__data{
+  margin-right: 40px;
+}
+.import__body{
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  padding-top:20px;
+}
+.import__content{
+  width:  1320px;
+  display: flex;
+  align-items: center;
+  height: 52px;
+}
+.content__title{
+  font-size: 20px;
+  font-weight: 400;
+  color: #898989;
+  margin-right: 65px;
+}
+.file-input {
   display: none;
 }
-
-[id^="clearIcon"]:hover {
-  opacity: 0.5;
+.import__label {
+  width: 1008px;
+  height: 52px;
 }
-
+.file-input-label {
+  display: flex;
+  align-items: center;
+  border: 2px solid #CBCBCB;
+  background-color: #fff;
+  color: #1E1E1E;
+  cursor: pointer;
+  box-sizing: border-box;
+  line-height: 52px;
+  width: 1008px;
+  padding-left: 10px;
+} 
+.folder{
+  margin-right: 10px;
+}
+.import__footer{
+  width:100%;
+  height: 138px;
+  background-color: #F4F4F4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.import__button{
+  height: 54px;
+  width: 232px;
+  background-color: #00B0D9;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+  border: none;
+  margin-right: 20px;
+}
+.cancle__button{
+  height: 54px;
+  width: 232px;
+  background-color: #F4F4F4;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+  border: 2px solid #00B0D9;
+  color: #9C9C9C;
+}
+.close-icon {
+  position: fixed;
+  top: 150px;
+  right: 120px;
+  font-size: 24px;
+  cursor: pointer;
+}
+/*Export*/
+#exportPopup {
+  height: 1080px;
+}
+.export__header {
+  background-color: #F4F4F4;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+}
+.export__title {
+  margin-left: 60px;
+}
+.export__title__text {
+  font-size: 30px;
+  color: #000;
+  font-weight: 700;
+}
+.export__header__content {
+  display: flex;
+  flex-direction: row;
+  margin-right: 60px;
+  color: #1E1E1E;
+}
+.export__link {
+  text-decoration: none;
+}
+.export__data {
+  margin-right: 40px;
+}
+.export__body {
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+}
+.export__content {
+  width: 1320px;
+  display: flex;
+  align-items: center;
+  height: 52px;
+}
+.content__title {
+  font-size: 20px;
+  font-weight: 400;
+  color: #898989;
+  margin-right: 65px;
+}
+.file-input {
+  display: none;
+}
+.export__label {
+  width: 1008px;
+  height: 52px;
+}
+.file-input-label {
+  display: flex;
+  align-items: center;
+  border: 2px solid #CBCBCB;
+  background-color: #fff;
+  color: #1E1E1E;
+  cursor: pointer;
+  box-sizing: border-box;
+  line-height: 52px;
+  width: 1008px;
+  padding-left: 10px;
+}
+.folder {
+  margin-right: 10px;
+}
+.export__footer {
+  width: 100%;
+  height: 138px;
+  background-color: #F4F4F4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.export__button {
+  height: 54px;
+  width: 232px;
+  background-color: #00B0D9;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+  border: none;
+  margin-right: 20px;
+}
+.cancel__button {
+  height: 54px;
+  width: 232px;
+  background-color: #F4F4F4;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+  border: 2px solid #00B0D9;
+  color: #9C9C9C;
+}
