--- a/styles.css
+++ b/styles.css
@@ -415,19 +415,10 @@ th {
   border: none;
 }
 /*Popup's*/
-.popup {
 
-}
 /*Import*/
 #importPopup {
   display: block;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 1433px;
-  z-index: 9999;
-  background-color: #fff;
 }
 .import__header {
   background-color: #F4F4F4;
@@ -535,13 +526,7 @@ th {
 /*Export*/
 #exportPopup {
   display: block;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 1433px;
-  z-index: 9999;
-  background-color: #fff;
+
 }
 
 .export__header {
@@ -655,3 +640,23 @@ th {
   color: #9C9C9C;
 }
 
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  z-index: 99;
+}
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  display: none;
+  z-index: 100;
+}
