--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,9 @@ body {
 input{
   padding: 0;
 }
-.header__table__content span {
+.header__table__content{
   margin-right: 0.5em; 
+  color: #9C9C9C;
 }
 .latestDate, .earliestDate{
   color: #4FA95D;
@@ -325,21 +326,12 @@ color:#DFDC1B;
   width: 1700px;
   height: 690px;
 }
-#data-table,
-tr,
-td,
-th {
+#data-table,tr,td,th {
   border: 2px solid #CBCBCB;
   border-collapse: collapse;
   font-size: 20px;
   font-weight: 400;
   color: #1E1E1E;
-}
-#data-table {
-
-}
-#data-table td, #data-table th {
-
 }
 .data-table__heaeder__title{
   display: flex;
@@ -397,7 +389,6 @@ th {
 .data-table__heaeder td:nth-child(5) {
   width: 306px;
 }
-
 .data-table__heaeder td:nth-child(6) {
   width: 118px;
 }
@@ -415,10 +406,10 @@ th {
   border: none;
 }
 /*Popup's*/
-
 /*Import*/
 #importPopup {
   display: block;
+  width: 1433px;
 }
 .import__header {
   background-color: #F4F4F4;
@@ -515,20 +506,18 @@ th {
   border: 2px solid #00B0D9;
   color: #9C9C9C;
 }
-
 .close-icon {
   position: fixed;
   top: 150px;
-  right: 120px;
+  right: -100px;
   font-size: 24px;
   cursor: pointer;
 }
 /*Export*/
 #exportPopup {
   display: block;
-
+  width: 1433px;
 }
-
 .export__header {
   background-color: #F4F4F4;
   display: flex;
@@ -536,62 +525,51 @@ th {
   align-items: center;
   height: 100px;
 }
-
 .export__title {
   margin-left: 60px;
 }
-
 .export__title__text {
   font-size: 30px;
   color: #000;
   font-weight: 700;
 }
-
 .export__header__content {
   display: flex;
   flex-direction: row;
   margin-right: 60px;
   color: #1E1E1E;
 }
-
 .export__link {
   text-decoration: none;
 }
-
 .export__data {
   margin-right: 40px;
 }
-
 .export__body {
   height: 600px;
   display: flex;
   justify-content: center;
   padding-top: 20px;
 }
-
 .export__content {
   width: 1320px;
   display: flex;
   align-items: center;
   height: 52px;
 }
-
 .content__title {
   font-size: 20px;
   font-weight: 400;
   color: #898989;
   margin-right: 65px;
 }
-
 .file-output {
   display: none;
 }
-
 .export__label {
   width: 1008px;
   height: 52px;
 }
-
 .file-output-label {
   display: flex;
   align-items: center;
@@ -604,11 +582,9 @@ th {
   width: 1008px;
   padding-left: 10px;
 }
-
 .folder {
   margin-right: 10px;
 }
-
 .export__footer {
   width: 100%;
   height: 138px;
@@ -617,7 +593,6 @@ th {
   justify-content: center;
   align-items: center;
 }
-
 .export__button {
   height: 54px;
   width: 232px;
@@ -628,7 +603,6 @@ th {
   border: none;
   margin-right: 20px;
 }
-
 .cancel__button {
   height: 54px;
   width: 232px;
@@ -639,7 +613,6 @@ th {
   border: 2px solid #00B0D9;
   color: #9C9C9C;
 }
-
 #overlay {
   position: fixed;
   top: 0;
@@ -656,7 +629,9 @@ th {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
-  padding: 20px;
   display: none;
   z-index: 100;
+}
+td {
+  white-space: pre-line;
 }
