--- a/styles.css
+++ b/styles.css
@@ -407,7 +407,7 @@ color:#DFDC1B;
 /*Popup's*/
 /*Import*/
 #importPopup {
-  display: block;
+  display: none;
   width: 1433px;
 }
 .import__header {
@@ -514,7 +514,7 @@ color:#DFDC1B;
 }
 /*Export*/
 #exportPopup {
-  display: block;
+  display: none;
   width: 1433px;
 }
 .export__header {
@@ -612,6 +612,126 @@ color:#DFDC1B;
   border: 2px solid #00B0D9;
   color: #9C9C9C;
 }
+
+#addPopup {
+  display: none;
+  width: 1433px;
+}
+
+.addPopup__header {
+  background-color: #F4F4F4;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+}
+
+.addPopup__title {
+  margin-left: 60px;
+}
+
+.addPopup__title__text {
+  font-size: 30px;
+  color: #000;
+  font-weight: 700;
+}
+
+.addPopup__header__content {
+  display: flex;
+  flex-direction: row;
+  margin-right: 60px;
+  color: #1E1E1E;
+}
+
+.addPopup__link {
+  text-decoration: none;
+}
+
+.addPopup__data {
+  margin-right: 40px;
+}
+
+.addPopup__body {
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+  background-color: #fff;
+}
+
+.addPopup__content {
+  width: 1320px;
+  display: flex;
+  align-items: center;
+  height: 52px;
+}
+
+.content__title {
+  font-size: 20px;
+  font-weight: 400;
+  color: #898989;
+  margin-right: 65px;
+}
+
+.file-output {
+  display: none;
+}
+
+.addPopup__label {
+  width: 1008px;
+  height: 52px;
+}
+
+.file-output-label {
+  display: flex;
+  align-items: center;
+  border: 2px solid #CBCBCB;
+  background-color: #fff;
+  color: #1E1E1E;
+  cursor: pointer;
+  box-sizing: border-box;
+  line-height: 52px;
+  width: 1008px;
+  padding-left: 10px;
+}
+
+.folder {
+  margin-right: 10px;
+}
+
+.addPopup__footer {
+  width: 100%;
+  height: 138px;
+  background-color: #F4F4F4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.add__button {
+  height: 54px;
+  width: 232px;
+  background-color: #00B0D9;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+  border: none;
+  margin-right: 20px;
+}
+
+.cancel__button {
+  height: 54px;
+  width: 232px;
+  background-color: #F4F4F4;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+  border: 2px solid #00B0D9;
+  color: #9C9C9C;
+}
+
+
+
 #overlay {
   position: fixed;
   top: 0;
